{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 31,
  "lineage": "7a18edb2-f54f-8955-6465-04fa1e31e8c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e27907e40e0e0cef",
            "arn": "arn:aws:ec2:eu-west-1:594715259457:elastic-ip/eipalloc-0e27907e40e0e0cef",
            "domain": "vpc",
            "id": "eipalloc-0e27907e40e0e0cef",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-249-92-62.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.249.92.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "Engineering",
              "Name": "school-payments-staging-nat-eip",
              "Owner": "DevOps Team",
              "Project": "School Payments"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "school-payments-staging-nat-eip",
              "Owner": "DevOps Team",
              "Project": "School Payments"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:594715259457:internet-gateway/igw-0cc0178159418ac64",
            "id": "igw-0cc0178159418ac64",
            "owner_id": "594715259457",
            "tags": {
              "CostCenter": "Engineering",
              "Name": "school-payments-staging-igw",
              "Owner": "DevOps Team",
              "Project": "School Payments"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "school-payments-staging-igw",
              "Owner": "DevOps Team",
              "Project": "School Payments"
            },
            "vpc_id": "vpc-01f04917848c2ee55"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e27907e40e0e0cef",
            "association_id": "eipassoc-0f6c1619006372321",
            "connectivity_type": "public",
            "id": "nat-0b53837a5391042a3",
            "network_interface_id": "eni-09b9b6aaeb640b79d",
            "private_ip": "10.0.101.170",
            "public_ip": "34.249.92.62",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dbc902851bfe4971",
            "tags": {
              "CostCenter": "Engineering",
              "Name": "school-payments-staging-nat",
              "Owner": "DevOps Team",
              "Project": "School Payments"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "school-payments-staging-nat",
              "Owner": "DevOps Team",
              "Project": "School Payments"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:594715259457:route-table/rtb-0bce185ac137da74b",
            "id": "rtb-0bce185ac137da74b",
            "owner_id": "594715259457",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b53837a5391042a3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Engineering",
              "Name": "school-payments-staging-private-rt",
              "Owner": "DevOps Team",
              "Project": "School Payments"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "school-payments-staging-private-rt",
              "Owner": "DevOps Team",
              "Project": "School Payments"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f04917848c2ee55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:594715259457:route-table/rtb-03d2d0f4118fef166",
            "id": "rtb-03d2d0f4118fef166",
            "owner_id": "594715259457",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc0178159418ac64",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Engineering",
              "Name": "school-payments-staging-public-rt",
              "Owner": "DevOps Team",
              "Project": "School Payments"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "school-payments-staging-public-rt",
              "Owner": "DevOps Team",
              "Project": "School Payments"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f04917848c2ee55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f40234dd542e20c",
            "route_table_id": "rtb-0bce185ac137da74b",
            "subnet_id": "subnet-0882b7d96c06a8541"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f8d88bfe413c9a6",
            "route_table_id": "rtb-0bce185ac137da74b",
            "subnet_id": "subnet-008d621ecd44a44e3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dd90283b30a24ed",
            "route_table_id": "rtb-0bce185ac137da74b",
            "subnet_id": "subnet-0e85525c2872d19a3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b27a3e340d7d9594",
            "route_table_id": "rtb-03d2d0f4118fef166",
            "subnet_id": "subnet-0dbc902851bfe4971"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0194fb310cc0a05ba",
            "route_table_id": "rtb-03d2d0f4118fef166",
            "subnet_id": "subnet-0d41d0e3a1ce3a53f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9043309528bc447",
            "route_table_id": "rtb-03d2d0f4118fef166",
            "subnet_id": "subnet-0186fde4d0e8c7c5b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:594715259457:subnet/subnet-0882b7d96c06a8541",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0882b7d96c06a8541",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594715259457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Engineering",
              "Name": "school-payments-staging-private-1",
              "Owner": "DevOps Team",
              "Project": "School Payments",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "school-payments-staging-private-1",
              "Owner": "DevOps Team",
              "Project": "School Payments",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01f04917848c2ee55"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:594715259457:subnet/subnet-008d621ecd44a44e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008d621ecd44a44e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594715259457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Engineering",
              "Name": "school-payments-staging-private-2",
              "Owner": "DevOps Team",
              "Project": "School Payments",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "school-payments-staging-private-2",
              "Owner": "DevOps Team",
              "Project": "School Payments",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01f04917848c2ee55"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:594715259457:subnet/subnet-0e85525c2872d19a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e85525c2872d19a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594715259457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Engineering",
              "Name": "school-payments-staging-private-3",
              "Owner": "DevOps Team",
              "Project": "School Payments",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "school-payments-staging-private-3",
              "Owner": "DevOps Team",
              "Project": "School Payments",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01f04917848c2ee55"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:594715259457:subnet/subnet-0dbc902851bfe4971",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbc902851bfe4971",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "594715259457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Engineering",
              "Name": "school-payments-staging-public-1",
              "Owner": "DevOps Team",
              "Project": "School Payments",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "school-payments-staging-public-1",
              "Owner": "DevOps Team",
              "Project": "School Payments",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01f04917848c2ee55"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:594715259457:subnet/subnet-0d41d0e3a1ce3a53f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d41d0e3a1ce3a53f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "594715259457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Engineering",
              "Name": "school-payments-staging-public-2",
              "Owner": "DevOps Team",
              "Project": "School Payments",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "school-payments-staging-public-2",
              "Owner": "DevOps Team",
              "Project": "School Payments",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01f04917848c2ee55"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:594715259457:subnet/subnet-0186fde4d0e8c7c5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0186fde4d0e8c7c5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "594715259457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Engineering",
              "Name": "school-payments-staging-public-3",
              "Owner": "DevOps Team",
              "Project": "School Payments",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "school-payments-staging-public-3",
              "Owner": "DevOps Team",
              "Project": "School Payments",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01f04917848c2ee55"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:594715259457:vpc/vpc-01f04917848c2ee55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f690d38f21c76126",
            "default_route_table_id": "rtb-0a890eea6c15b6a5b",
            "default_security_group_id": "sg-0434d9bdc8f758bc0",
            "dhcp_options_id": "dopt-0b8e2ffa57a09eeb6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f04917848c2ee55",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a890eea6c15b6a5b",
            "owner_id": "594715259457",
            "tags": {
              "CostCenter": "Engineering",
              "Name": "school-payments-staging-vpc",
              "Owner": "DevOps Team",
              "Project": "School Payments"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "school-payments-staging-vpc",
              "Owner": "DevOps Team",
              "Project": "School Payments"
            }
          }
        }
      ]
    }
  ]
}